feat: cleanup